--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ai": "^3.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "highlight.js": "^11.9.0",
     "install": "^0.13.0",
     "lucide-react": "^0.354.0",
     "next": "14.1.3",
@@ -22,6 +23,8 @@
     "openai": "^4.28.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "rehype-highlight": "^7.0.0",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
