--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "tailwindcss-animate": "^1.0.7",
     "uuidv4": "^6.2.13",
     "vaul": "^0.9.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
